# apple_gripper

./: .gitmodules  README.md
gripper/: CMakeLists.txt  package.xml  setup.py
gripper/ardiuno/pyserial_test/: pyserial_test.ino
gripper/config/: apple_proxy_parameters.yaml  rviz_world_config.rviz  test_world.rviz  user_info.yaml
gripper/config/ur5e/: joint_limits.yaml  physical_parameters.yaml  visual_parameters.yaml
gripper/config/urdf/: scene_description.urdf.xacro
gripper/data/: proxy_pick_metadata_1710802856.0929735.yaml
gripper/gripper/: arm_control.py  moveit_api_test.py  proxy_pick.py  suction_gripper.py  user.py  viz.py
gripper/launch/: moveit_api_test_launch.py  suction_gripper_launch.py  ur5e_launch.py  ur_moveit_launch.py  user_experiment_launch.py
gripper/meshes/collision/: Gripper_Suction_collision.STL  UR5_big_table.STL  UR5_small_table.STL  apple_proxy_collision.STL
gripper/src/: cpp_node.cpp  moveit_service.cpp
gripper/urdf/: scene_description.urdf.xacro  test.urdf.xacro  ur.srdf.xacro  ur_macro.srdf.xacro
gripper_msgs/: CMakeLists.txt  package.xml
gripper_msgs/srv/: GetArmPosition.srv  GripperFingers.srv  GripperVacuum.srv  MoveArm.srv  SetArmGoal.srv  StartProxy.srv
