<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>gripper</name>
  <version>0.0.0</version>
  <description>Package rebuilding Alejo Velasquez's ROS1 vacuum apple gripper in ROS2</description>
  <maintainer email="jonesal9@oregonstate.edu">Ali Jones</maintainer>
  <license>GPL-3.0-only</license>

  <depend>rclpy</depend>
  <depend>rclcpp</depend>
  <depend>std_msgs</depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
